<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="phone">手机</string>
	<string name="password">密码</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="forget_pwd">忘记密码</string>
	<string name="account_password_not_null">手机号或密码不能为空</string>
	<string name="illegal_mobile_num">非法手机号</string>
	<string name="phone_verification">手机验证</string>
	<string name="phone_verification_code">请输入短信验证码</string>
	<string name="get_verification">获取</string>
	<string name="nickname">昵称：</string>
	<string name="commit">提交</string>
	<string name="account_name">会员名</string>
	<string name="update_phone">修改手机号码</string>
	<string name="update_pwd">修改登录密码</string>
	<string name="update_head">1/验证身份</string>
	<string name="update_pwd2">2/修改密码</string>
	<string name="complete">3/完成</string>
	<string name="now_phone_no">您当前的手机号码是：</string>
	<string name="get_verification2">获取短信验证码</string>
	<string name="next">下一步</string>
	<string name="input_original_pwd">输入原密码</string>
	<string name="input_new_pwd">输入新密码</string>
	<string name="comfirm_pwd">确认新密码</string>
	<string name="update_pwd_complete">恭喜您，修改密码成功</string>
	<string name="go_on_select_goods">您可以进入商城 继续购买商品</string>
	<string name="input_new_phone">输入新手机号</string>
	<string name="update_phone2">2/修改已验证手机</string>
	<string name="update_phone_complete">恭喜您，修改手机成功</string>
	
	<string name="main_page">首页</string>
	<string name="input_key">请输入关键词</string>
	<string name="inform">信息咨询</string>
	<string name="feedback">问题反馈</string>
	<string name="advice">投诉建议</string>
	<string name="book">服务预约</string>
	<string name="new_recommend">新品.推荐</string>
	<string name="new_more">更多新品</string>
	<string name="product_series">产品系列</string>
	<string name="selected">已选：</string>
	<string name="store">门店：</string>
	<string name="store_has">本店有货</string>
	<string name="connect_phone">联系电话：</string>
	<string name="connect_people">联系人：</string>
	<string name="goods_inform">商品信息</string>
	<string name="goods_comm">商品评论</string>
	<string name="my_goods_card">我的购物车</string>
	<string name="add_goods_card">加入购物车</string>
	<string name="store_area">区域</string>
	<string name="store_distance">距离</string>
	<string name="store_order">综合排序</string>
	<string name="store_location">您现在的位置：</string>
	<string name="sale_product">主营产品</string>
	<string name="edit">编辑</string>
	<string name="all_selected">全选</string>
	<string name="combined">合计：</string>
	<string name="settlement">去结算</string>
	
	
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
