<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/update_pwd_point" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/update_pwd_head" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/update_head"
                android:textColor="#f5ac39"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/update_pwd_comm_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/complete"
                android:textColor="#888888"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/update_pwd_lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/update_phone"
                android:textColor="#f5ac39"
                android:textSize="17sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_new_phone"
            android:textColor="#888888"
            android:layout_gravity="center_vertical"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_original_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:textColor="#888888"
            android:layout_marginRight="20dip"
            android:layout_gravity="center_vertical"
            android:textSize="17sp" />
    </LinearLayout>

    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_margin="20dip" >

        <Button
            android:id="@+id/update_pwd_verifi_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:text="@string/get_verification2"
            android:textColor="#ffffff"
            android:layout_centerVertical="true"
            android:textSize="14sp" 
            android:padding="3dip"
            android:background="#f5ac39"/>

        <EditText
            android:id="@+id/update_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/update_pwd_verifi_btn"
            android:textColor="#888888"
            android:layout_marginRight="10dip"
            android:textSize="17sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/update_phone_next_btn"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:text="@string/next"
        android:layout_marginTop="20dip"
        android:textColor="#ffffff"
        android:background="#f5ac39"
        android:layout_margin="20dip"
        android:textSize="17sp" />

</LinearLayout>