<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dip" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/update_pwd_point" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/update_pwd_head" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/update_head"
                android:textColor="#f5ac39"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/update_pwd_comm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/complete"
                android:textColor="#f5ac39"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/update_pwd_lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/update_phone2"
                android:textColor="#f5ac39"
                android:layout_marginLeft="8dip"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#888888" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:background="@drawable/update_phone_complete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:text="@string/update_phone_complete"
        android:textColor="#f5ac39"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="20dip"
        android:background="#f5ac39" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="5dip"
            android:drawableRight="@drawable/arrow_right"
            android:text="@string/go_on_select_goods"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>