<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <ListView
        android:id="@+id/shopcar_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_alignParentBottom="true"
        android:background="#ffffff" >

        <CheckBox
            android:id="@+id/shopcar_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:button="@drawable/check_item_selector"
            android:paddingLeft="10dip"
            android:text="@string/all_selected"
            android:textColor="@color/text_49"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/combine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dip"
            android:layout_toRightOf="@id/shopcar_check"
            android:text="@string/combined"
            android:textColor="@color/text_49"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/money_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dip"
            android:layout_toRightOf="@id/combine_text"
            android:text="¥"
            android:textColor="@color/red_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/shopcar_combine_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/money_lable"
            android:textColor="@color/red_text"
            android:textSize="19sp" />

        <Button
            android:id="@+id/shopcar_settlement_btn"
            android:layout_width="80dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/red_text"
            android:text="@string/settlement"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </RelativeLayout>

</RelativeLayout>