<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <ImageView
        android:id="@+id/login_top_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/login_bg_top" />

    <LinearLayout
        android:id="@+id/login_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_top_img"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="40dip"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/login_edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:inputType="textPhonetic"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="3dip"
                android:background="#ffffff" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/login_layout_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="20dip"
        android:layout_below="@id/login_layout_phone"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_verification"
            android:textSize="18sp"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/login_edit_verification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:hint="@string/phone_verification_code"
                    android:background="@null" />
                <Button android:id="@+id/regist_verification_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_verification"
                    android:background="@drawable/login_register"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="3dip"
                android:background="#ffffff" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_layout_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="20dip"
        android:layout_below="@id/login_layout_verification"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_pwd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/login_edit_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="3dip"
                android:background="#ffffff" />
        </LinearLayout>
    </LinearLayout>
	
	<Button android:id="@+id/login_register"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/register"
	    android:textSize="18sp"
	    android:background="@drawable/login_register"
	    android:layout_below="@id/login_btn"
	    android:layout_marginLeft="30dip"
	    android:layout_marginTop="20dip"
	    android:layout_marginRight="30dip"/>
	
</RelativeLayout>